# OpenBusAPI

./: .gitignore  .readthedocs.yaml  README.md  fetch_operators_data.py  openBusAPI.py  operators.py  operators.sql  pyproject.toml  setup_operators_db.py
.github/workflows/: ci.yml
app/: __main__.py  api.py  functions.py
docs/: conf.py  index.rst  link_license.rst  modules.rst  open_bus_api.rst  operators.rst  tools.rst
open_bus_api/: __main__.py  api.py  config.py  functions.py
operators/: __init__.py  fetch_data.py  fetch_operators_data.py  initialise_database.py  operators.sql  setup_operators_db.py
templates/: index.html  operator_data.html
tests/: app_test.py  config_test.py  conftest.py  database_test.py  test_result_check.py
tools/: APITracker.py  AnalyseResponse.py  __init__.py  location_reader.py  location_tools.py  output.py  xml_tools.py
