[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "openBusAPI"
description = "A Python API interface for the open Bus service API"
requires-python = ">= 3.10"
authors = [ { name = "Z M Williams", email = "z.m.will@icloud.com" }]
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.32",
    "flask>=3.1.0"
]
keywords = ["Python", "API", "Flask", "OpenBus", "BusTracker"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "ruff"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v"
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = ["tests/*", "docs/*"]

[tool.coverage.report]
ignore_errors = true
fail_under = 80
skip_empty = true
